# AoC2022

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  main.cpp
Day1/: Day1.hpp
Day2/: Day2.hpp  test.py
Utility/: Utility.hpp
